added demo button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <i class="bi bi-list mobile-nav-toggle"></i>
           </nav>
 
-          <a href="#about" class="get-started-btn scrollto">Register/Login Here</a>
+          <a href="https://app.ordereka.com/?res=1&tab=10" class="get-started-btn scrollto">See Demo</a>
         </div>
       </div>
 
