--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://script.google.com/macros/s/AKfycbyKEXa4GFAV60DeRC-8eMmlgbLOK1BU40FzS4oaEL7dlb2nCgT_WG17a-nDGPvOccpPXA/exec" method="post" role="form" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
